#541: Add system property to allow setting SecurityManager in Java 18+.