@@ -1,6 +1,7 @@
 @echo off
 setlocal
 set CLASS_NAME=info.rlwhitcomb.tester.Tester
+set JVM_ARGS=-Djava.security.manager=allow
 call %~dp0_find_and_run_class %*
 endlocal
 exit /b %errorlevel%
